fix: hide PageIndicator on mobile

--- a/.vitepress/theme/styles/components/PageIndicator.scss
+++ b/.vitepress/theme/styles/components/PageIndicator.scss
@@ -124,7 +124,7 @@
 }
 
 @media screen and (max-width: 840px) {
-  .page-indicator {
+  .PageIndicator {
     display: none;
   }
 }
